testdata/baselines/reference/submodule/conformance/globalMergeWithCommonJSAssignmentDeclaration.errors.txt
bug27099.js(1,1): error TS2322: Type 'number' is not assignable to type 'string'.
bug27099.js(3,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== bug27099.js (2 errors) ====
    window.name = 1;
    ~~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    window.console; // should not have error: Property 'console' does not exist on type 'typeof window'.
    module.exports = 'anything';
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
    